--- a/teachings/wsi/Konfidenz = 1000.mdx
+++ b/teachings/wsi/Konfidenz = 1000.mdx
@@ -58,10 +58,10 @@ Verbesserungen:
 ### Für $\sigma^2$
 
 
-Ausganglage: Wir haben einen Schätzer $\^{\sigma}^2 = \frac{1}{n-1}\sum_{i=1}^n (X_i - \overline{X})^2$ für $\sigma^2$.
+Ausganglage: Wir haben einen Schätzer $\hat{\sigma}^2 = \frac{1}{n-1}\sum_{i=1}^n (X_i - \overline{X})^2$ für $\sigma^2$.
 
-$[L,U] = [\frac{n-1}{\chi^2(n-1)_{1- \alpha / 2} \^{\sigma}^2}, \frac{n-1}{\chi^2(n-1)_{\alpha / 2} \^{\sigma}^2}]$
+$[L,U] = [\frac{n-1}{\chi^2(n-1)_{1- \alpha / 2} \hat{\sigma}^2}, \frac{n-1}{\chi^2(n-1)_{\alpha / 2} \hat{\sigma}^2}]$
 
 ### Für $p$
 
-$[L,U] = [\^{p} - z_{1- \alpha / 2} \sqrt(\frac{\^{p}(1- \^{p})}{n}), \^{p} + z_{1- \alpha / 2} \sqrt(\frac{\^{p}(1- \^{p})}{n})]$
+$[L,U] = [\hat{p} - z_{1- \alpha / 2} \sqrt(\frac{\hat{p}(1- \hat{p})}{n}), \hat{p} + z_{1- \alpha / 2} \sqrt(\frac{\hat{p}(1- \hat{p})}{n})]$
